// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar componentWillMount() !isSingleCalendar 1`] = `
<div>
  <div>
    <CalendarDateTimePicker
      borderLeft={true}
      borderRight={true}
      highlight={
        Array [
          2006-03-31T18:00:00.000Z,
          2006-03-31T18:00:00.000Z,
        ]
      }
      icon={true}
      isCalendarShown={true}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      time={false}
      value={2006-04-30T18:00:00.000Z}
      visibleDate={
        Array [
          2006-03-31T18:00:00.000Z,
          2006-03-31T18:00:00.000Z,
        ]
      }
    />
  </div>
</div>
`;

exports[`Calendar componentWillMount() isSingleCalendar 1`] = `
<div>
  <div>
    <CalendarDateTimePicker
      borderLeft={true}
      borderRight={true}
      highlight={2006-08-03T18:00:00.000Z}
      icon={true}
      isCalendarShown={true}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      time={false}
      value={2006-07-31T18:00:00.000Z}
      visibleDate={2006-08-03T18:00:00.000Z}
    />
  </div>
</div>
`;

exports[`Calendar onChange() 1`] = `2016-04-30T18:00:00.000Z`;

exports[`Calendar onChangeSecondValue() 1`] = `2016-04-30T18:00:00.000Z`;

exports[`Calendar onSetDate() !isSingleCalendar !firstClick 1`] = `2009-04-08T18:00:00.000Z`;

exports[`Calendar onSetDate() !isSingleCalendar firstClick 1`] = `2009-04-08T18:00:00.000Z`;

exports[`Calendar onSetDate() isSingleCalendar 1`] = `2009-04-08T18:00:00.000Z`;

exports[`Calendar render() !isSingleCalendar 1`] = `
<div>
  <div>
    <CalendarDateTimePicker
      borderLeft={true}
      borderRight={true}
      highlight={
        Array [
          2009-04-03T18:00:00.000Z,
          2009-04-05T18:00:00.000Z,
        ]
      }
      icon={true}
      isCalendarShown={true}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      time={false}
      value={2009-04-30T18:00:00.000Z}
      visibleDate={
        Array [
          2009-04-03T18:00:00.000Z,
          2009-04-05T18:00:00.000Z,
        ]
      }
    />
  </div>
</div>
`;

exports[`Calendar render() basic 1`] = `
<div>
  <div>
    <CalendarDateTimePicker
      borderLeft={true}
      borderRight={true}
      highlight={2018-04-03T18:00:00.000Z}
      icon={true}
      isCalendarShown={true}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      time={false}
      value={2018-03-31T18:00:00.000Z}
      visibleDate={2018-04-03T18:00:00.000Z}
    />
  </div>
</div>
`;
